[tool.poetry]
authors = [
  "Craig Trim <craigtrim@gmail.com>",
]

maintainers = [
  "Craig Trim <craigtrim@gmail.com>",
]

description = "Helper Microservice to create yWorks Graphs in Jupyter"
license = "None"
name = "yworks-helper"
readme = "README.md"

version = "0.1.9"

keywords = ["yworks", "utility", "helper", "y-works"]
repository = "https://github.com/craigtrim/yworks_helper"

classifiers = [
  "Development Status :: 4 - Beta",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/craigtrim/yworks_helper/issues"

[tool.poetry.dependencies]
baseblock = "*"
ipykernel = "*"
jupyter = "^1.0.0"
python = "^3.8.5"
yfiles_jupyter_graphs = "*"

[tool.poetry.dev-dependencies]
autopep8 = "*"
flakeheaven = "*"
plac = "*"
pre-commit = "^2.20.0"
pytest = "*"

[tool.poetry.build]
generate-setup-file = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.flakeheaven]
base = "https://raw.githubusercontent.com/flakeheaven/flakeheaven/main/pyproject.toml"
exclude = ["__init__.py", "README.md", "setup.py", ".venv", ".git", "*.pyc", "*.pyi"]
format = "grouped"
max_line_length = 500
show_source = true

[tool.flakeheaven.plugins]
"flake8-*" = ["+*"]
flake8-bandit = ["-*", "+S1??"]
flake8-docstrings = ["-*"]
pyflakes = ["+*", "-F401", "-F403"]
